# initry

./: LICENSE  README.md  docker-compose.yaml  run_docker.sh
backend/: .flake8  .gitignore  .isort.cfg  .pylintrc  Dockerfile  Makefile  README.md  env.example  generate_openapi.py  main.py  pyproject.toml  requirements.txt
backend/api/: search.py  stats.py  test_runs.py  tests.py
backend/database/: mongo.py
backend/openapi-codegen/: config.json  run.sh
backend/proto/: responses.proto  run.sh  test.proto  test_run.proto  tests.proto
backend/protobufs/: responses_pb2.py  responses_pb2.pyi  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py  test_run_pb2.py  test_run_pb2.pyi  test_run_pb2_grpc.py  tests_pb2.py  tests_pb2.pyi  tests_pb2_grpc.py
backend/schemas/: search.py  test.py  test_run.py
backend/services/: grpc.py  main.py  search.py  stats.py  test_runs.py  tests.py
backend/settings/: __init__.py  settings.py
backend/storage/: __init__.py  storage.py
backend/tasks/: tasks.py  test_logs.py  test_run_finalization.py  xml_related.py
backend/tests/api/: test_api_search.py  test_api_tests.py
backend/tools/: tools.py
backend/ws/: routes.py  ws.py
frontend/: .gitignore  Dockerfile  README.md  env.example  package-lock.json  package.json
frontend/app/: ClientLayout.tsx  layout.tsx  page.tsx  sidebar.css  sidebar.module.css
frontend/app/search/: page.tsx
frontend/client/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/client/.openapi-generator/: FILES
frontend/client/api/: default-api.ts  search-api.ts  stats-api.ts  test-runs-api.ts  tests-api.ts
frontend/client/models/: data.ts  description.ts  failed.ts  httpvalidation-error.ts  index.ts  location.ts  log.ts  message.ts  nodeid.ts  passed.ts  response-gettestbyid.ts  search-request.ts  search-response.ts  skipped.ts  startedat.ts  status.ts  stderr.ts  stdout.ts  stoppedat.ts  test-run.ts  test-runs-total-data.ts  test-runs-trend.ts  test-status.ts  test.ts  testrunuuid.ts  validation-error-loc-inner.ts  validation-error.ts
frontend/openapi-codegen/: run.sh
frontend/tools/: format-duration.ts
(+27 files in other folders)
