[tool.poetry]
package-mode = false
name = "initry"
version = "0.4.0"
description = ""
authors = ["Andrejs Smirnovs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "0.110.2"
pymongo = "4.7.0"
pydantic = "2.7.1"
uvicorn = "0.29.0"
celery = "5.4.0"
redis = "5.0.4"
python-dotenv = "1.0.1"
websockets = "12.0"
grpcio = "1.62.2"
grpcio-tools = "1.62.2"
aiofiles = "23.2.1"
xmltodict = "0.13.0"
python-multipart = "0.0.9"

[tool.poetry.dev-dependencies]
pytest = "8.1.2"
flower = "2.0.1"
black = "24.4.2"
pylint = "3.1.0"
flake8 = "7.0.0"
isort = "5.13.2"
pytest-mock = "3.14.0"
pytest-cov = "5.0.0"
httpx = "0.27.0"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report html:coverage"
testpaths = "tests"

[tool.coverage.run]
omit = [
    "protobufs/*",
    "generate_openapi.py",
    "*__init__.*",
    "tests/*",
    "tools/*",
    "tasks/*",
    "database/*",
    "schemas/*"
    ]
[tool.black]
extend-exclude = 'protobufs/*'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
